<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profileBackground"
    tools:context=".ProfileFragment">
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="20dp">

<TextView
android:id="@+id/welcome"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/welcome"
android:textColor="#8601AF"
android:textStyle="bold"
android:layout_marginBottom="20dp"
android:layout_marginTop="20dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp">

</TextView>


<ImageView
android:id="@+id/profilePic"
android:layout_width="match_parent"
android:scaleType="centerCrop"
android:layout_height="186dp"
android:layout_marginBottom="5dp"
android:layout_marginLeft="5dp"
android:layout_marginRight="5dp"
android:layout_marginTop="5dp"
android:src="@drawable/profile">

</ImageView>




<TextView
android:id="@+id/p_age"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/p_age"
android:textColor="#8601AF"
android:textStyle="bold"
android:layout_marginBottom="10dp"
android:layout_marginTop="10dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp">

</TextView>

<TextView
android:id="@+id/p_occupation"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/p_occupation"
android:textColor="#8601AF"
android:textStyle="bold"
android:layout_marginBottom="10dp"
android:layout_marginTop="10dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp">

</TextView>

<TextView
android:id="@+id/p_description"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/p_desription"
android:textColor="#8601AF"
android:textStyle="bold"
android:layout_marginBottom="20dp"
android:layout_marginTop="20dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp">

</TextView>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:gravity="end">

<Button
android:id="@+id/goback_button"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingTop="10dp"
android:paddingBottom="10dp"
android:layout_marginTop="20dp"
android:gravity="center"
android:onClick="goBackMain"
    android:textColor="#ffffff"
    android:textColorHint="#ffffff"
    android:background="#0000ff"
android:textStyle="bold"
android:text="@string/goback"/>

<TextView
android:id="@+id/say_my_name"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/say_my_name"
android:textStyle="bold"
android:layout_marginBottom="10dp"
android:layout_marginTop="20dp"
android:layout_marginLeft="10dp"
android:layout_marginRight="10dp">

</TextView>





</LinearLayout>
</LinearLayout>

</ScrollView>